--- a/assets/style.css
+++ b/assets/style.css
@@ -31,7 +31,7 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
-.past {
+/* .past {
   background-color: #d3d3d3;
   color: white;
 }
@@ -44,10 +44,10 @@ textarea {
 .future {
   background-color: #77dd77;
   color: white;
-}
+} */
 
 .saveBtn {
-  border-left: 1px solid black;
+  border-left: 1px solid #000000;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
